# toolobjects

./: .gitignore  README.md  TODO.md
src/: cd_tool.ps1  pyproject.toml  venv.sh
src/assets/client/: package.json
src/assets/client/App/: App.js  RPC.js  RPCEvent.js
src/assets/client/Auth/: AuthManager.js
src/assets/client/Components/: Component.js  ObjectsList.js
src/assets/client/Objects/: Renderable.js
src/assets/client/Page/: LogicalBlock.js  Page.js  Styles.js
src/assets/client/Pages/: Auth.js  Object.js
src/assets/client/Styles/: Common.css
src/assets/client/css/: dark_theme.css  style.css
src/assets/client/js/: funcs.js  sw_assets.js
src/assets/client/templates/: base.html
src/locales/: en.json
src/tool/: cli.py  tool.py
src/tool/App/: App.py  Server.py  __init__.py
src/tool/App/ACL/: AuthLayer.py  AuthToken.py  GetHash.py  Limitable.py  Permission.py  Session.py  User.py
src/tool/App/Arguments/: Argument.py  ArgumentValues.py  ArgumentsDict.py  Comparer.py
src/tool/App/Client/: Bookmark.py  Client.py  Displayment.py
src/tool/App/Config/: Config.py  ConfigItem.py  Get.py  Set.py
src/tool/App/Console/: Console.py  ConsoleExecutorWheel.py  ConsoleView.py  PrintLog.py  (+3 more)
src/tool/Data/: Boolean.py  DictList.py  Increment.py  Int.py  JSON.py  Number.py  Random.py  String.py  Text.py  XML.py  XMLToJson.py
src/tool/Files/: Dir.py  File.py  FileManager.py  FileType.py  Navigate.py
src/tool/Media/: Auto.py  ByDir.py  ByPath.py  ByStorageUnit.py  Download.py  FromPage.py  Get.py  Media.py
src/tool/Web/: Hyperlink.py  Mime.py  URL.py
(+660 files in other folders)
