[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolobjects"
version = "0.0.1"
dependencies  = ["pydantic", "sqlalchemy", "asyncio", "aiohttp", "pymysql", "snowflake-id", "requests", "urllib3", "idna", "certifi", "pycryptodomex", "colorama", "json5", "Brotli==1.1.0", "charset-normalizer", "argon2-cffi", "pip-system-certs"]

[tool.setuptools]
package-dir = {"" = "tool"}
packages = {find = {where = ["tool"]}}

[tool.setuptools.exclude-package-data]
"*" = ["*.egg-info"]
